url stream + metatags

--- a/app/index.html
+++ b/app/index.html
@@ -3,15 +3,19 @@
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# music: http://ogp.me/ns/music#">
     <meta charset="utf-8">
-    <title>Malandraca Tango</title>
-    <meta name="description" content="Malandraca radio de tango">
+    <title>Malandraca - Radio de Tango</title>
+    <meta name="description" content="Radio de tango">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--<meta property="fb:app_id" content="302184056577324" />-->
+    <meta property="og:title" content="Escucha Malandraca" />
+    <meta property="og:site_name" content="Malandraca" />
     <meta property="og:type" content="music.radio_station" />
-    <meta property="og:url" content="www.malandraca.com" />
-    <meta property="og:title" content="Malandraca - Radio de Tango" />
-    <meta property="og:image" content="http://www.malanadraca.com/images/malandracafb.png" />
+    <meta property="og:image" content="http://www.malandraca.com/images/malandracafb.8e432d18.png" />
+    <meta property="og:url" content="http://www.malandraca.com" />
+    <meta property="og:description" content="Radio de Tango" />
+    <meta property="og:audio" content="http://stream.malandraca.com:6366/1/;" />
+    <meta property="og:audio:type" content="audio/vnd.facebook.bridge" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
